<resources>
    <string name="app_name">RadioKaya</string>
    <string name="show">Show :</string>
    <string name="time">Time :</string>
    <string name="cancel_reminder">Cancel Reminder</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="presenters">presenters :</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="show_on_air">Show on Air</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="call">Call</string>
    <string name="message_us">Message us</string>
    <string name="visit_our_website">Visit Our Website</string>
    <string name="email_us">Email Us</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">email</string>
    <string name="website">website</string>
    <string name="sms">sms</string>
    <string name="applicationKey">a7dcb065-aba9-4a1e-8151-e5dc6686088e</string>
    <string name="live_now">Live Now....</string>
    <string name="facebook">facebook</string>
    <string name="twitter">twitter</string>
    <string name="instagram">instagram</string>
    <string name="youtube">youtube</string>
    <string name="Facebook">Facebook</string>
    <string name="Twitter">Twitter</string>
    <string name="Instagram">Instagram</string>
    <string name="Youtube">Youtube</string>
</resources>